# playground-rust

100-exercises-to-learn-rust/: flake.nix
100-exercises-to-learn-rust/.direnv/: flake-profile-5-link
100-exercises-to-learn-rust/exercises/02_basic_calculator/01_integers/src/: lib.rs
bevy-2d/: Cargo.toml  flake.nix
bevy-2d/src/: lib.rs  main.rs
bevy-2d/tests/: movement.rs
bevy-3d/: .gitignore  Cargo.toml  flake.nix
bevy-3d/src/: lib.rs  main.rs
bevy-3d/tests/: enemies.rs  mouse_look.rs  pause.rs
codewars/: readme.md
codewars/src/: kyu7.rs  lib.rs
codewars/src/kyu7/: add.rs  all_inclusive.rs  alphabet_symmetry.rs  check_exam.rs  collatz.rs  coloured_triangles.rs  digital_cypher.rs  disarium.rs  disemvowel_trolls.rs  flick.rs  from_a_to_z.rs  maximum_length_difference.rs  power_of_two.rs  sort_by_last_char.rs  square_every_digit.rs
discovery/: flake.nix
discovery/microbit/src/05-led-roulette/: Cargo.toml
discovery/microbit/src/09-led-compass/: Cargo.toml
discovery/microbit/src/11-snake-game/: Cargo.toml
fractals/: Cargo.toml  flake.nix  readme.md
fractals/src/: julia.rs  lib.rs  main.rs  mandelbrot.rs
life/: Cargo.toml  flake.nix  index.html  life.js  readme.md
life/docs/: life_wasm.d.ts  life_wasm.js  life_wasm_bg.wasm  life_wasm_bg.wasm.d.ts  package.json
life/src/: lib.rs
light-circle/: .gitignore  Cargo.toml  flake.nix  readme.md
light-circle/.cargo/: config.toml
light-circle/src/: main.rs
lists/: flake.nix
lists/src/: first.rs  lib.rs  second.rs  third.rs
microbit/: flake.nix  readme.md
microbit/src/: main.rs
music-box/: .gitignore  Cargo.toml  build.rs  flake.nix  moonlight.pcm  zelda.pcm
music-box/.cargo/: config.toml
music-box/doc/: wiring.md
music-box/scripts/: convert-audio.sh
music-box/src/: audio.rs  lib.rs  user_input.rs
oled-clock/: .gitignore  Cargo.toml  flake.nix
oled-clock/.github/workflows/: rust_ci.yml
oled-clock/doc/: display.md
oled-clock/src/: main.rs
ray-tracing/: flake.nix  readme.md
rust/src/: kyu7.rs
rust/src/kyu7/: all_inclusive.rs  alphabetical_addition.rs  array_leaders.rs  balanced_number.rs  exes_and_ohs.rs  find_digit.rs  find_next_square.rs  growth_of_population.rs  longest_vowel_chain.rs  middle.rs  mumbling.rs  open_or_senior.rs  ordered_count_of_chars.rs  remove_smallest.rs  reverse_words.rs  spiraling_box.rs  sum_of_odd_numbers.rs  two_to_one.rs
rustlings/: flake.nix
rustlings/exercises/02_functions/: functions1.rs
rustlings/exercises/04_primitive_types/: primitive_types2.rs
rustlings/exercises/06_move_semantics/: move_semantics5.rs
rustlings/exercises/07_structs/: structs1.rs  structs3.rs
rustlings/exercises/08_enums/: enums2.rs  enums3.rs
rustlings/exercises/11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings/exercises/12_options/: options1.rs  options2.rs
rustlings/exercises/13_error_handling/: errors2.rs  errors3.rs  errors4.rs  errors6.rs
rustlings/exercises/15_traits/: traits3.rs  traits4.rs
rustlings/exercises/17_tests/: tests1.rs  tests2.rs
rustlings/exercises/18_iterators/: iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
rustlings/exercises/19_smart_pointers/: rc1.rs
rustlings/exercises/20_threads/: threads1.rs
rustlings/exercises/23_conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/quizzes/: quiz1.rs  quiz2.rs
stepper/: Cargo.toml  readme.md
stepper/.cargo/: config.toml
stepper/src/: main.rs
(+52 files in other folders)
